package com.foodsquad.FoodSquad.model.entity;

public enum OrderStatus {
    PENDING,
    COMPLETED,
    CANCELLED
}
