package com.foodsquad.FoodSquad.model.entity;

public enum PromotionTarget {
    MENUITEMS , CATEGORIES

}
